# TwitchDownloader

./: README.md  eslint.config.cjs  forge.config.js  i18n.config.ts  index.html  index.js  package-lock.json  package.json  preferences.html  tailwind.config.js  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: backend_checks.yml  frontend_checks.yml  release.yml
config/: config.ts  i18n.config.ts  user.config.json  user.preferences.ts
locales/: de.json  en.json  es.json  fr.json  it.json
public/: index.html
public/lang/: en.json  es.json
src/: App.css  App.tsx  ConfigContext.ts  ConfigProvider.tsx  FormComponent.tsx  ThemeProvider.tsx  dark-theme.css  main.tsx  preferences.tsx  styles.css  types.ts  vod.controller.ts  vod.service.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.json  es.json
src-tauri/src/: config.rs  download.rs  main.rs  menu.rs  translations.rs  utils.rs  window.rs
src/components/: App.tsx  Form.tsx  Preferences.tsx  ProgressBar.tsx
src/downloader/: detectContentType.ts  getContentId.ts  getManifest.ts  getPlaylist.ts
src/downloader/auth/: getAuthHeaders.ts  getAuthVariables.ts  getCredentials.ts
src/hooks/: useForm.ts  useInit.ts  usePreferences.ts
src/locales/: de.json  en.json  es.json  fr.json  it.json
src/main/: app.module.ts  container.ts  main.ts  symbols.ts
src/main/application/useCases/: authClip.usecase.ts  authLive.usecase.ts  authVod.usecase.ts  detectContentType.usecase.ts  downloadClipFromFeed.usecase.ts  downloadFromFeed.usecase.ts  downloadLiveFromFeed.usecase.ts  downloadVodFromFeed.usecase.ts  getClipIdFromUrl.usecase.ts  getClipManifest.usecase.ts  getExtensionFromPlaylist.usecase.ts  getFeedFromManifest.usecase.ts  getFileFromPath.usecase.ts  getFileFromUrl.usecase.ts  getLiveIdFromUrl.usecase.ts  getLiveManifest.usecase.ts  getUrlsFromTxtFile.usecase.ts  getVodIdFromUrl.usecase.ts  getVodManifest.usecase.ts  parseFeed.usecase.ts
src/main/controllers/: feed.controller.ts  vod.controller.ts
src/main/controllers/vod/: feed.controller.ts  vod.controller.ts
src/main/domain/constants/: authConfigClip.ts  authConfigLive.ts  (+7 more)
src/main/interfaces/: Credential.ts  Credentials.ts  Menu.ts  Playlist.ts
src/main/services/: feed.service.ts  file.service.ts  twitch.service.ts
src/main/twitch/: handler.controller.ts
src/main/vod/: vod.controller.spec.ts  vod.controller.ts  vod.module.ts  vod.service.ts
src/renderer/: index.ts  main.ts  preload.ts
src/renderer/public/: about.html  index.html  test.html
src/terminal/: main.ts
src/tests/: detectContentType.test.ts  getContentId.test.ts
test/: app.e2e-spec.ts  twitch.test.ts  vod.test.ts
test/tmp/: list.txt
(+72 files in other folders)
